--- a/Sample/SampleMaui/MainPage.xaml
+++ b/Sample/SampleMaui/MainPage.xaml
@@ -14,7 +14,7 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
             <Label Text="{Binding LastLoad, StringFormat='Last Loaded: {0:hh:mm:ss}'}"
